--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-string-replace": "^1.1.0",
+    "react-tooltip": "^5.13.1",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
